# rust-sgx-remote-attestation

./: .gitignore  build.sh  cleanup.sh  run.sh
ra-client/: Cargo.toml
ra-client/examples/: tls-client.rs
ra-client/src/: context.rs
ra-common/: Cargo.toml
ra-enclave/: Cargo.toml
ra-sp/: Cargo.toml
sgx-crypto/: Cargo.toml
