[package]
name = "ra-enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
example = ["byteorder"]

[dependencies]
bincode = "1.2.1"
sgx-isa = { version = "0.3.1", features = ["sgxstd"] }
sgx-crypto = { path = "../sgx-crypto" }
ra-common = { path = "../ra-common" }
byteorder = { version = "1.3.2", optional = true }
half = "=1.6"
bitflags = "=1.2"
cmake = "=0.1.42"

[[example]]
name = "tls-enclave"
test = false
required-features = ["example"]
